--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@tsconfig/next": "^1.0.5"
+    "@tsconfig/next": "^1.0.5",
+    "prettier": "^2.8.4"
   }
 }
