--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "run-p lint:*",
+    "lint:next": "next lint . --ignore-path .prettierignore --max-warnings 0",
+    "lint:prettier": "prettier --check .",
+    "lint:typecheck": "tsc --pretty --noEmit",
+    "format": "run-s format:eslint format:prettier",
+    "format:eslint": "npm run lint:next --fix",
+    "format:prettier": "npm run lint:prettier --write"
   },
   "dependencies": {
     "@next/font": "13.1.6",
