--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@tsconfig/next": "^1.0.5",
+    "@tsconfig/next-strictest": "^1.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4"
   }
